# her.ai

./: .gitignore  .gitmodules  .sample.env  README.md
.cursor/: mcp.json  mcp.sample.json
.cursor/rules/: whatsapp-persona.mdc
.github/: copilot-instructions.md
chat_files/: README.md
whatrag/: .gitignore  .python-version  .sample.env  README.md  app.py  cli_chat.py  mcp_server.py  prompt.py  pyproject.toml  rag.py  rag_chroma.py  ragapp.py
whatrag/archive/: .gitignore  README.md  rag.py  rag_chroma.py
whatrag/chat_utils/: __init__.py
whatrag/rag/: __init__.py  retriever.py
whatsapp-chat-parser/: .gitignore  Cargo.toml  README.md
whatsapp-chat-parser/src/: lib.rs  main.rs
whatsapp-chat-parser/tests/: test_chat_parser.rs
whatsapp_chat_parser/: .gitignore  Cargo.toml  README.md
whatsapp_chat_parser/src/: lib.rs  parser.rs
whatsapp_chat_parser/tests/: test_chat_parser.rs
