[project]
name = "whatrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.14",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.14",
    "langchain-google-genai>=2.0.8",
    "langchain-text-splitters>=0.3.5",
    "python-dotenv>=1.0.1",
]
