[project]
name = "whatrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "faiss-cpu>=1.10.0",
    "faiss-gpu>=1.7.2",
    "langchain>=0.3.14",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.14",
    "langchain-google-genai>=2.0.8",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.3",
    "langchain-text-splitters>=0.3.5",
    "python-dotenv>=1.0.1",
]
