[package]
name = "whatsapp_chat_parser"
version = "0.1.0"
edition = "2021"
default-run="analysis"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.43"
colored = "3.1.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.25.0"
tiktoken-rs = "0.9.1"
vader-sentimental = "0.1.2"
